# gxemul-rs6000-860

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.skel  README.md  a.out  config.h  config.h.cmake  configure  ctrl-alt-del.dbg  find_names_in_asm.py  generate_commands.cc  memcode.txt  run860
.github/workflows/: test.yml
aix415-programs/: Makefile  odmget.s
experiments/: new_test_x.c
src/components/: CMakeLists.txt
src/components/cpu/: M88K_CPUComponent.cc  MIPS_CPUComponent.cc
src/components/memory/: RAMComponent.cc
src/console/: CMakeLists.txt  console.cc  console_unix.cc  console_win32.cc  x11.cc
src/cpus/: CMakeLists.txt  Makefile.skel  cpu.cc  cpu_alpha.cc  cpu_alpha_instr.cc  cpu_alpha_instr_loadstore.cc  cpu_alpha_palcode.cc  cpu_arm.cc  cpu_arm_coproc.cc  cpu_arm_instr.cc  cpu_arm_instr_dpi.cc  cpu_arm_instr_loadstore.cc  cpu_dyntrans.cc  cpu_m88k.cc  cpu_m88k_instr.cc  cpu_m88k_instr_loadstore.cc  cpu_mips.cc  cpu_mips_coproc.cc  cpu_mips_instr.cc  cpu_mips_instr_loadstore.cc  cpu_mips_instr_unaligned.cc  cpu_ppc.cc  cpu_ppc_instr.cc  cpu_ppc_instr_loadstore.cc  cpu_sh.cc  cpu_sh_instr.cc  generate_arm_loadstore.c  generate_arm_multi.c  generate_arm_r.c  generate_head.c  generate_m88k_bcnd.c  generate_mips_loadstore_multi.c  generate_tail.c  memory_alpha.cc  memory_arm.cc  memory_mips.cc  memory_ppc.cc  memory_rw.cc  memory_sh.cc
src/debugger/: CMakeLists.txt  Makefile.skel  crc16.cc  debugger.cc  debugger_cmds.cc  debugger_expr.cc  gdblib.cc
src/devices/: .index  CMakeLists.txt  Makefile.skel  a.out  bus_isa.cc  bus_pci.cc  dev_8253.cc  dev_8259.cc  dev_86mc65.cc  dev_adb.cc  dev_asc.cc  dev_bt459.cc  dev_dec5800.cc  dev_dreamcast_asic.cc  dev_dreamcast_maple.cc  dev_dreamcast_rtc.cc  dev_eagle.cc  dev_fb.cc  dev_fdc.cc  dev_footbridge.cc  dev_ibm_isa.cc  dev_lsi53c895a.cc  dev_mb8696x.cc  dev_mc146818.cc  dev_mp.cc  dev_ns16550.cc  dev_osiop.cc  dev_pccmos.cc  dev_pcic.cc  dev_pckbc.cc  dev_prep.cc  dev_pvr.cc  dev_px.cc  dev_ram.cc  dev_random.cc  dev_rtc.cc  dev_sgi_gbe.cc  dev_sgi_ip20.cc  dev_sgi_ip22.cc  dev_sgi_ip32.cc  (+8 more)
src/devices/fonts/: Xconv_raw_to_c  Xconv_raw_to_c.c  font8x10.cc  font8x16.cc  font8x8.cc
src/disk/: CMakeLists.txt  diskimage.cc  diskimage_scsicmd.cc
src/file/: CMakeLists.txt  file.cc  file_aout.cc  file_ecoff.cc  file_elf.cc  file_macho.cc  file_raw.cc  file_srec.cc
src/include/: ConsoleUI.h  GXemul.h  bus_isa.h  bus_pci.h  console.h  cpu.h  cpu_alpha.h  cpu_arm.h  cpu_m88k.h  cpu_mips.h  cpu_ppc.h  cpu_sh.h  cpu_traits.h  crc.h  debugger.h  devices.h  diskimage.h  float_emul.h  machine.h  make_ppc_spr_strings  make_ppc_spr_strings_new.cc  mem_flags.h  mem_passthrough.h  memory.h  memory_rw.h  misc.h  net.h  opcodes_ppc.h  quick_pc_to_pointers.h  refcount_ptr.h  symbol.h  test_ppc_spr.h  time_win32.h  tlb_cache.h  tlb_cache32.h  tlb_cache64.h  vga.h  x11.h
src/include/components/: CPUDyntransComponent.h  M88K_CPUComponent.h  MIPS_CPUComponent.h
src/machines/: CMakeLists.txt  a.out  machine.cc  machine_alpha.cc  machine_arc.cc  machine_mvmeppc.cc  machine_playstation2.cc  machine_pmax.cc  machine_prep.cc  machine_sgi.cc  machine_test.cc  makeautomachine.cc  out.cc
src/main/: CMakeLists.txt  CommandInterpreter.cc  ComponentFactory.cc  GXemul.cc  Makefile.skel  MemoryPassthrough.cc  debug_new.cc  generate_commands.cc  generate_components.cc
src/main/fileloaders/: FileLoader_ELF.cc  FileLoader_aout.cc  FileLoader_raw.cc
src/net/: CMakeLists.txt  net.cc  net_ip.cc  net_misc.cc
src/old_main/: CMakeLists.txt  emul.cc  emul_parse.cc  float_emul.cc  main.cc  memory.cc  misc.cc  settings.cc  timer.cc
src/promemul/: CMakeLists.txt  arcbios.cc  dec_prom.cc  dreamcast.cc  dreamcast_scramble.cc  ps2_bios.cc
src/symbol/: CMakeLists.txt  symbol.cc
src/ui/: CMakeLists.txt
src/ui/console/: ConsoleUI.cc
